# ZHKH_Backend

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.local.yml  docker-compose.yml  docker-stack.pgweb.yml  docker-stack.yml  go.mod  go.sum  gunicorn_logging.conf  justfile  pyproject.toml  pyrightconfig.json  temp.ipynb
cmd/gerda/: main.go
db/data/: .gitignore  anomaly_criteria.csv  restricted_repeated_applications.csv  short_defects.csv
db/migrations/: 000001_initial.up.sql  000002_applications.up.sql  000003_import.up.sql  000004_geocoord.down.sql  000004_geocoord.up.sql  000005_internal_id.down.sql  000005_internal_id.up.sql  000006_is_anomaly.down.sql  000006_is_anomaly.up.sql  000007_restricted.up.sql  000008_timestamps.up.sql  000009_short_defects.up.sql  000010_short_defects_fill.up.sql  000011_anomaly_crit_fill.up.sql  000012_rest_rep.up.sql  000013_rest_rep_fill.up.sql  000014_add_applicant_id.down.sql  000014_add_applicant_id.up.sql  000015_fill_applicant_id.up.sql  000016_mosru.up.sql  000017_mosru_fill.up.sql  000018_mosru_id.up.sql  000019_geo_not_found.up.sql  000020_is_anomaly_default.up.sql  000021_timestamps.up.sql  000022_timestamps_fill.up.sql  000023_indexes.up.sql  000024_indexes_anom.up.sql  000025_row_estimator.up.sql  000026_compound.up.sql  000027_compound_fill.up.sql
db/misc/: set_test_anomalies.sql
dockerfiles/: chloe.dockerfile  frontend.dockerfile  gerda.dockerfile  sarah.dockerfile
gerda/celery/: geocoding.go  server.go
gerda/config/: env.go  env_test.go
gerda/postgres/: client_test.go  db_test.go  open.go
gerda/postgres/models/: app.go
gerda/slog/: log_test.go
nginx/: nginx.conf
sarah/: api.py  config.py  conftest.py  db.py  deps.py  main.py
sarah/anomaly/: api.py  db.py  filters.py  reader.py
sarah/applications/: api.py
scripts/: csvfix.py  directswarm.sh  fix_with_pandas.py
scripts/csvfix/: main.go
scripts/steal_mos_ru/: main.go
