[project]
name = "gerda"
version = "0.1.0"
description = ""
authors = [
    {name = "Gerda Team", email = "qufiwefefwoyn@gmail.com"},
]
dependencies = [
    "fastapi>=0.85.1",
    "uvicorn[standard]>=0.19.0",
    "SQLAlchemy[asyncio]==2.0.0b1",
    "rich>=12.6.0",
    "asyncpg>=0.26.0",
    "httpx[http2]>=0.23.0",
    "ujson>=5.5.0",
    "email-validator>=1.3.0",
    "gunicorn>=20.1.0",
    "structlog>=22.1.0",
    "psycopg2-binary>=2.9.5",
    "python-json-logger>=2.0.4",
    "redis>=4.3.4",
    "fastapi-cache2[redis]>=0.1.9",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.3",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=2.5.0",
    "Faker>=15.1.1",
    "pytest-sugar>=0.9.5",
    "jupyterlab>=3.5.0",
    "jupyterlab-code-formatter>=1.5.3",
    "isort>=5.10.1",
    "black>=22.10.0",
    "pandas>=1.5.1",
]

[tool.bandit]
exclude_dirs = ["tests", "gunicorn_conf.py"]
